# routes/api.php
@@ -3,7 +3,10 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\LoginController;
 
+//login e logout
+Route::post('/login', [LoginController::class, 'login']);
 
 // Visualizar usuários
 Route::get('/users', [UserController::class, 'index']);
